--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -13,3 +13,8 @@ footer {
         justify-content: space-between;
     }
 }
+@media (max-width: 768px) {
+    footer {
+        font-size: 8px;
+    }
+}
