--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,32 +1,51 @@
 header {
-    position: sticky;
-    top: 0;
-    z-index: 998;
-    .total-jobs {
-        background: var(--primary-color);
-        color: white;
-        padding: 20px;
-        box-shadow: 0 2px 2.5px 0 rgb(94 94 94 / 30%);
-        .header-bar {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            .button-outline {
-                color: #e5eff8;
-                text-decoration: none;
-                border: 1px solid #e5eff8;
-                padding: 6px 10px 6px 8px;
-                border-radius: 3px;
-                min-width: 58px;
-                text-align: center;
-                display: flex;
-                align-items: center;
-            }
-            h1 {
-                font-size: 38px;
-                font-family: "IBM Plex Serif";
-                text-align: center;
-            }
-        }
+  position: sticky;
+  top: 0;
+  z-index: 998;
+  .total-jobs {
+    background: var(--primary-color);
+    color: white;
+    padding: 20px;
+    box-shadow: 0 2px 2.5px 0 rgb(94 94 94 / 30%);
+    .header-bar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      .button-outline {
+        color: #e5eff8;
+        text-decoration: none;
+        border: 1px solid #e5eff8;
+        padding: 6px 10px 6px 8px;
+        border-radius: 3px;
+        min-width: 58px;
+        text-align: center;
+        display: flex;
+        align-items: center;
+      }
+      h1 {
+        font-size: 38px;
+        font-family: "IBM Plex Serif";
+        text-align: center;
+      }
     }
+  }
+}
+@media (max-width: 768px) {
+  header {
+    .total-jobs {
+      padding: 20px 0;
+      .header-bar {
+        h1 {
+          font-size: 16px;
+          text-align: left;
+          padding-left: 16px;
+        }
+      }
+    }
+  }
+
+  .button-outline {
+    font-size: 14px;
+    min-width: auto;
+  }
 }
