--- a/src/styles/WeAreHiring.scss
+++ b/src/styles/WeAreHiring.scss
@@ -204,10 +204,10 @@
 @media only screen and (max-width: 767px) {
   .we-are-hiring {
     flex-direction: column-reverse;
-    height: 100dvh;
+    height: 100vh;
     .right-box {
       border-radius: 0;
-      padding: 88px 40px 40px;
+      padding: 125px 40px 38px;
       height: 50vh;
       .help-and-support {
         .help-and-support-label {
