--- a/src/styles/JobList.scss
+++ b/src/styles/JobList.scss
@@ -157,15 +157,23 @@
     border: 0;
     border-radius: 3px;
     margin-top: 16px;
+    text-transform: uppercase;
     cursor: pointer;
     text-align: center;
-    min-width: unset;
+    min-width: 195px;
     outline: none;
     padding: 10px 14px;
     display: flex;
     font-family: "IBM Plex Serif", serif;
     font-size: 14px;
     font-weight: 400;
+    border:1px solid var(--primary-color);
+    transition: background-color ease .35s;
+    &:hover{
+      background-color: transparent;
+      color: var(--primary-color);
+      font-weight: 600;
+    }
   }
   h3 {
     font-family: "IBM Plex Serif", serif;
